--- a/public/html/template.html
+++ b/public/html/template.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React</title>
-    <link rel='stylesheet' type='text/css' href='./css/style.css' media='screen' />
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
     <div data-js='app'></div>
-    <script src="./bundle.js"></script>
 </body>
 </html>
